--- a/index.html
+++ b/index.html
@@ -71,7 +71,147 @@
 
         <!-- Main -->
         <div class="container">
-            
+            <div class="banner">
+                <img src="./img/banner.png" alt="baner">
+            </div>
+
+            <div class="list-container">
+                <!-- 1 -->
+                <div class="vid-list">
+                    <img src="./img/thumbnail1.png" aria-details="hidden" alt="" class="thumbnail">
+                    <div>
+                        <div class="nav-flex2">
+                            <a href="#">
+                                <img src="./img/Jack.png" alt="">
+                            </a>
+                            <div class="vid-info">
+                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                                <p>Easy Tutorials</p>
+                                <p>290mln Views  1 years ago</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 2 -->
+                <div class="vid-list">
+                    <img src="./img/thumbnail2.png" aria-details="hidden" alt="" class="thumbnail">
+                    <div>
+                        <div class="nav-flex2">
+                            <a href="#">
+                                <img src="./img/Jack.png" alt="">
+                            </a>
+                            <div class="vid-info">
+                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                                <p>Easy Tutorials</p>
+                                <p>290mln Views  1 years ago</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 3 -->
+                <div class="vid-list">
+                    <img src="./img/thumbnail3.png" aria-details="hidden" alt="" class="thumbnail">
+                    <div>
+                        <div class="nav-flex2">
+                            <a href="#">
+                                <img src="./img/Jack.png" alt="">
+                            </a>
+                            <div class="vid-info">
+                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                                <p>Easy Tutorials</p>
+                                <p>290mln Views  1 years ago</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 4 -->
+                <div class="vid-list">
+                    <img src="./img/thumbnail4.png" aria-details="hidden" alt="" class="thumbnail">
+                    <div>
+                        <div class="nav-flex2">
+                            <a href="#">
+                                <img src="./img/Jack.png" alt="">
+                            </a>
+                            <div class="vid-info">
+                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                                <p>Easy Tutorials</p>
+                                <p>290mln Views  1 years ago</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 5 -->
+                <div class="vid-list">
+                    <img src="./img/thumbnail5.png" aria-details="hidden" alt="" class="thumbnail">
+                    <div>
+                        <div class="nav-flex2">
+                            <a href="#">
+                                <img src="./img/Jack.png" alt="">
+                            </a>
+                            <div class="vid-info">
+                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                                <p>Easy Tutorials</p>
+                                <p>290mln Views  1 years ago</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 6 -->
+                <div class="vid-list">
+                    <img src="./img/thumbnail6.png" aria-details="hidden" alt="" class="thumbnail">
+                    <div>
+                        <div class="nav-flex2">
+                            <a href="#">
+                                <img src="./img/Jack.png" alt="">
+                            </a>
+                            <div class="vid-info">
+                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                                <p>Easy Tutorials</p>
+                                <p>290mln Views  1 years ago</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 7 -->
+                <div class="vid-list">
+                    <img src="./img/thumbnail7.png" aria-details="hidden" alt="" class="thumbnail">
+                    <div>
+                        <div class="nav-flex2">
+                            <a href="#">
+                                <img src="./img/Jack.png" alt="">
+                            </a>
+                            <div class="vid-info">
+                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                                <p>Easy Tutorials</p>
+                                <p>290mln Views  1 years ago</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 8 -->
+                <div class="vid-list">
+                    <img src="./img/thumbnail8.png" aria-details="hidden" alt="" class="thumbnail">
+                    <div>
+                        <div class="nav-flex2">
+                            <a href="#">
+                                <img src="./img/Jack.png" alt="">
+                            </a>
+                            <div class="vid-info">
+                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                                <p>Easy Tutorials</p>
+                                <p>290mln Views  1 years ago</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <script src="./js/index.js"></script>
