play-video.html

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                     <img src="./img/thumbnail1.png" aria-details="hidden" alt="" class="thumbnail">
                     <div>
                         <div class="nav-flex2">
-                            <a href="#">
+                            <a href="./play-video.html">
                                 <img src="./img/Jack.png" alt="">
                             </a>
-                            <div class="vid-info">
-                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                            <div class="vid-info2">
+                                <a href="./play-video.html">Best channel to learn coding that help you to be a web devoloper</a>
                                 <p>Easy Tutorials</p>
                                 <p>290mln Views  1 years ago</p>
                             </div>
@@ -98,11 +98,11 @@
                     <img src="./img/thumbnail2.png" aria-details="hidden" alt="" class="thumbnail">
                     <div>
                         <div class="nav-flex2">
-                            <a href="#">
+                            <a href="./play-video.html">
                                 <img src="./img/Jack.png" alt="">
                             </a>
-                            <div class="vid-info">
-                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                            <div class="vid-info2">
+                                <a href="./play-video.html">Best channel to learn coding that help you to be a web devoloper</a>
                                 <p>Easy Tutorials</p>
                                 <p>290mln Views  1 years ago</p>
                             </div>
@@ -115,11 +115,11 @@
                     <img src="./img/thumbnail3.png" aria-details="hidden" alt="" class="thumbnail">
                     <div>
                         <div class="nav-flex2">
-                            <a href="#">
+                            <a href="./play-video.html">
                                 <img src="./img/Jack.png" alt="">
                             </a>
-                            <div class="vid-info">
-                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                            <div class="vid-info2">
+                                <a href="./play-video.html">Best channel to learn coding that help you to be a web devoloper</a>
                                 <p>Easy Tutorials</p>
                                 <p>290mln Views  1 years ago</p>
                             </div>
@@ -132,11 +132,11 @@
                     <img src="./img/thumbnail4.png" aria-details="hidden" alt="" class="thumbnail">
                     <div>
                         <div class="nav-flex2">
-                            <a href="#">
+                            <a href="./play-video.html">
                                 <img src="./img/Jack.png" alt="">
                             </a>
-                            <div class="vid-info">
-                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                            <div class="vid-info2">
+                                <a href="./play-video.html">Best channel to learn coding that help you to be a web devoloper</a>
                                 <p>Easy Tutorials</p>
                                 <p>290mln Views  1 years ago</p>
                             </div>
@@ -149,11 +149,11 @@
                     <img src="./img/thumbnail5.png" aria-details="hidden" alt="" class="thumbnail">
                     <div>
                         <div class="nav-flex2">
-                            <a href="#">
+                            <a href="./play-video.html">
                                 <img src="./img/Jack.png" alt="">
                             </a>
-                            <div class="vid-info">
-                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                            <div class="vid-info2">
+                                <a href="./play-video.html">Best channel to learn coding that help you to be a web devoloper</a>
                                 <p>Easy Tutorials</p>
                                 <p>290mln Views  1 years ago</p>
                             </div>
@@ -166,11 +166,11 @@
                     <img src="./img/thumbnail6.png" aria-details="hidden" alt="" class="thumbnail">
                     <div>
                         <div class="nav-flex2">
-                            <a href="#">
+                            <a href="./play-video.html">
                                 <img src="./img/Jack.png" alt="">
                             </a>
-                            <div class="vid-info">
-                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                            <div class="vid-info2">
+                                <a href="./play-video.html">Best channel to learn coding that help you to be a web devoloper</a>
                                 <p>Easy Tutorials</p>
                                 <p>290mln Views  1 years ago</p>
                             </div>
@@ -183,11 +183,11 @@
                     <img src="./img/thumbnail7.png" aria-details="hidden" alt="" class="thumbnail">
                     <div>
                         <div class="nav-flex2">
-                            <a href="#">
+                            <a href="./play-video.html">
                                 <img src="./img/Jack.png" alt="">
                             </a>
-                            <div class="vid-info">
-                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                            <div class="vid-info2">
+                                <a href="./play-video.html">Best channel to learn coding that help you to be a web devoloper</a>
                                 <p>Easy Tutorials</p>
                                 <p>290mln Views  1 years ago</p>
                             </div>
@@ -200,11 +200,11 @@
                     <img src="./img/thumbnail8.png" aria-details="hidden" alt="" class="thumbnail">
                     <div>
                         <div class="nav-flex2">
-                            <a href="#">
+                            <a href="./play-video.html">
                                 <img src="./img/Jack.png" alt="">
                             </a>
-                            <div class="vid-info">
-                                <a href="#">Best channel to learn coding that help you to be a web devoloper</a>
+                            <div class="vid-info2">
+                                <a href="./play-video.html">Best channel to learn coding that help you to be a web devoloper</a>
                                 <p>Easy Tutorials</p>
                                 <p>290mln Views  1 years ago</p>
                             </div>
